# snc-core

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  RELEASE_GUIDE.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: 01_smoke_test.py  02_snc_qwen.py  03_humaneval_mini.py  04_full_bench.py  05_behavioral_clustering.py  06_humaneval_full.py  README.md
examples/: 01_basic.py  02_humaneval.py  03_custom_backend.py
paper/: preamble.tex  snc-trust-layer-paper.md
src/snc_core/: __init__.py  clustering.py  governance.py  hybrid.py  parsing.py  prompts.py
src/snc_core/adapters/: __init__.py  base.py  callable_.py  ollama.py  openai_.py
tests/: test_governance.py  test_hybrid.py  test_parsing.py
